# coursework_cpp

./: BWFilter.h  CMakeLists.txt  ImageFilter.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MyGraphicsView.cpp  MyGraphicsView.h  RotateFilter.cpp  app.qss  blurfilter.h  brushtool.cpp  brushtool.h  changefilterboolcommand.cpp  changefilterintcommand.h  changelayerpipelinecommand.cpp  changelayerpipelinecommand.h  clarityFilter.cpp  clarityFilter.h  collapsiblesection.cpp  collapsiblesection.h  cropcommand.cpp  cropcommand.h  erasertool.cpp  erasertool.h  exposurefilter.cpp  exposurefilter.h  fadefilter.cpp  fadefilter.h  filterpipeline.cpp  filterpipeline.h  filterslider.cpp  filterslider.h  filterspanel.cpp  filterspanel.h  fliplayercommand.cpp  fliplayercommand.h  gammafilter.cpp  gaussianblurutil.h  highlightfilter.cpp  (+37 more)
commands/: changelayerpipelinecommand.cpp  changelayerpipelinecommand.h  cropcommand.h  fliplayercommand.cpp  fliplayercommand.h  layercommands.cpp  layercommands.h  rotatelayercommand.cpp  rotatelayercommand.h  strokecommand.h  undoredostack.cpp  undoredostack.h
commands/legacy/: changefilterboolcommand.h  changefilterintcommand.cpp
core/filters/: BWFilter.cpp  BWFilter.h  BrightnessFilter.cpp  RotateFilter.h  blurfilter.cpp  clarityFilter.h  contrastfilter.h  exposurefilter.cpp  fadefilter.cpp  fastblur.cpp  fastblur.h  fastblurfilter.cpp  fastblurfilter.h  flipfilter.h  gammafilter.cpp  gammafilter.h  gaussianblurutil.cpp  grainfilter.cpp  grainfilter.h  highlightfilter.cpp  highlightfilter.h  rgbhsvutil.cpp  rgbhsvutil.h  rotatefilter.cpp  saturationfilter.cpp  saturationfilter.h  shadowfilter.cpp  shadowfilter.h  splittoningfilter.cpp  splittoningfilter.h  temperaturefilter.cpp  tintfilter.h  vibrancefilter.cpp  vibrancefilter.h  vignettefilter.cpp  vignettefilter.h
core/layers/: layer.h  layermanager.cpp  layermanager.h
core/pipeline/: filterpipeline.cpp  filterpipeline.h
filters/: BWFilter.cpp  BrightnessFilter.cpp  BrightnessFilter.h  RotateFilter.h  blurfilter.cpp  blurfilter.h  clarityFilter.cpp  contrastfilter.cpp  contrastfilter.h  exposurefilter.h  fadefilter.h  flipfilter.cpp  flipfilter.h  gammafilter.h  gaussianblurutil.cpp  grainfilter.cpp  grainfilter.h  imagefilter.h  saturationfilter.h  sharpenfilter.cpp  sharpenfilter.h  splittoningfilter.h  temperaturefilter.h  tintfilter.cpp  tintfilter.h  vignettefilter.cpp  vignettefilter.h
graphics/: MyGraphicsView.cpp  MyGraphicsView.h
legacy/: MainWindow.ui
resources/: icons.qrc
resources/styles/: app.qss
tools/: brushtool.h  erasertool.cpp  movetool.cpp  movetool.h  tool.cpp  tool.h
ui/: MainWindow.cpp  MainWindow.h  filterspanel.cpp  filterspanel.h  layerspanel.cpp  layerspanel.h
widgets/: collapsiblesection.cpp  collapsiblesection.h  filterslider.cpp
